# autobattery

./: .gitignore  AGENTS.md  NA_ION_DIGITAL_TWIN_RESEARCH.md  README.md  RESEARCH_SURVEY.md  pyproject.toml
configs/: base.yaml  lmb.yaml  nmb.yaml
docs/: architecture.md  h20_runbook.md  plan_analytical_proof.md  plan_foundation_model.md  plan_improvement.md  plan_neural_operator.md  plan_publication_roadmap.md  plan_universality_paper.md  work-log.md
scripts/: 01_generate_synthetic.py  02_train_forward.py  03_inverse_identify.py  03_train_inverse.py  04_validate.py  05_sweep_params.py  100_health_check.py  101_severson_dryrun.py  101b_severson_archetype_deepdive.py  102_universality_pipeline.py  103_paper_figures.py  104b_paper_new_figures.py  105_gp_recovery.py  106_multi_rate_recovery.py  107_per_pca_gp_recovery.py  108_model_reduction.py  109_lib_ablation.py  110_noise_breakdown.py  111_correlation_structure.py  112_analytical_jacobian.py  11_generate_fullfield.py  12_train_fno.py  13_evaluate_fno.py  14_fno_inverse.py  15_multi_crate_identify.py  16_regenerate_multi_crate.py  17_multi_crate_v2.py  18_fisher_analysis.py  19_gen_lib_data.py  20_gen_design_data.py  21_design_optimize.py  22_degradation_diagnosis.py  23_degradation_analysis.py  24_multi_cell_degradation.py  25_gen_lfp_degradation.py  26_train_lfp_fno.py  27_lfp_degradation_diagnosis.py  28_degradation_modes.py  29_synthetic_validation.py  30_baseline_pybamm_fit.py  (+66 more)
tests/: test_adaptive_weighting.py  test_cv_split.py  test_detect_gitt_hppc.py  test_dv_signature.py  test_forward_normalization.py  (+7 more)
(+86 files in other folders)
